sd/plugins/garage/resources/statefulset-garage.yaml
# Source: garage/templates/workload.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: garage
  labels:
    helm.sh/chart: garage-0.9.1
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
    app.kubernetes.io/version: "v2.1.0"
    app.kubernetes.io/managed-by: Helm
    
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: garage
      app.kubernetes.io/instance: garage
  replicas: 1
  serviceName: garage-headless
  podManagementPolicy: Parallel
  template:
    metadata:
      annotations:
        checksum/config: 59f2b8ce0ea8ae342ad0c6771faefc0d24ba4d5be9fb6cdaa759d02fd0775b21
      labels:
        helm.sh/chart: garage-0.9.1
        app.kubernetes.io/name: garage
        app.kubernetes.io/instance: garage
        app.kubernetes.io/version: "v2.1.0"
        app.kubernetes.io/managed-by: Helm
        
    spec:
      serviceAccountName: garage
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: garage
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          image: "dxflrs/amd64_garage:v2.1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3900
              name: s3-api
            - containerPort: 3902
              name: web-api
            - containerPort: 3903
              name: admin
          volumeMounts:
            - name: meta
              mountPath: /mnt/meta
            - name: data
              mountPath: /mnt/data
            - name: etc
              mountPath: /etc/garage.toml
              subPath: garage.toml
          resources:
            limits:
              cpu: 200m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 512Mi
      volumes:
        - name: configmap
          configMap:
            name: garage-config
        - name: etc
          emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: meta
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: "1Gi"
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: "200Gi"
